--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.3"
+    "astro": "^5.16.3",
+    "marked": "^17.0.1"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20.0.0",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.0.0"
